--- a/projekt-kindertreff-demo.html
+++ b/projekt-kindertreff-demo.html
@@ -2,76 +2,87 @@
 <html lang="de">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Kindertreff</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Kindertreff – Spielverabredungen ohne Stress</title>
 
 <style>
-:root{
-  --bg:#f6f7f8; --surface:#fff; --text:#1f2933;
-  --muted:#6b7280; --accent:#4f6ef7;
-  --border:#e5e7eb; --radius:14px;
-  --own:#e8ecff;
+:root {
+  --bg:#f6f7f8; --surface:#fff; --text-main:#1f2933;
+  --text-muted:#6b7280; --accent:#4f6ef7; --border:#e5e7eb; --radius:14px;
 }
 
-body{
+body {
   margin:0;
   font-family:system-ui,sans-serif;
-  background:var(--bg);
-  color:var(--text);
+  background:radial-gradient(1200px 600px at 50% -200px,rgba(79,110,247,0.06),transparent 70%),var(--bg);
+  color:var(--text-main);
 }
 
-header{
+header {
   background:var(--surface);
   border-bottom:1px solid var(--border);
-  padding:1.2rem;
+  padding:1.25rem;
   text-align:center;
 }
 
-main{
+main {
   max-width:760px;
   margin:auto;
   padding:1.5rem 1rem 4rem;
 }
 
-.card{
+h2 { font-size:1rem;margin-bottom:0.75rem; }
+
+.card {
   background:var(--surface);
   border:1px solid var(--border);
   border-radius:var(--radius);
   padding:1rem;
-  margin-bottom:1.2rem;
+  margin-bottom:1rem;
 }
 
-form{
-  display:grid;
-  gap:0.75rem;
-}
+form { display:grid; gap:0.75rem; }
 
-label{
+label {
   font-size:0.75rem;
-  color:var(--muted);
+  color:var(--text-muted);
+  margin-bottom:-0.3rem;
 }
 
-input, select, button{
+input, select, button {
   font-family:inherit;
   padding:0.6rem;
   border-radius:10px;
   border:1px solid var(--border);
 }
 
-.time-grid{
+.time-grid {
   display:grid;
   grid-template-columns:1fr 1fr;
   gap:0.75rem;
 }
 
-button{
+button {
   background:var(--accent);
   color:white;
   border:none;
   cursor:pointer;
 }
 
-#week{
+button.secondary {
+  background:transparent;
+  color:var(--text-muted);
+  border:1px solid var(--border);
+  font-size:0.8rem;
+  padding:0.3rem 0.6rem;
+}
+
+button.secondary:hover {
+  background:#f3f4f6;
+  color:var(--text-main);
+}
+
+#week {
   display:grid;
   grid-template-columns:repeat(7,1fr);
   gap:1rem;
@@ -80,42 +91,39 @@ button{
 @media(max-width:900px){#week{grid-template-columns:repeat(2,1fr);}}
 @media(max-width:600px){#week{grid-template-columns:1fr;}}
 
-.day{
+.day {
   background:var(--surface);
-  border:1px solid var(--border);
   border-radius:12px;
   padding:1rem;
+  border:1px solid var(--border);
 }
 
-.day h3{
+.day h3 {
   font-size:0.85rem;
-  color:var(--muted);
-  margin:0 0 0.5rem;
+  font-weight:500;
+  margin:0 0 0.6rem;
+  color:var(--text-muted);
 }
 
-.entry{
+.entry {
   border:1px solid var(--border);
   border-radius:10px;
-  padding:0.5rem;
-  margin-bottom:0.4rem;
+  padding:0.55rem 0.6rem;
+  margin-bottom:0.5rem;
   background:#fafafa;
 }
 
-.entry.own{background:var(--own);}
-.entry.expired{opacity:0.45;text-decoration:line-through;}
+.entry.own { background:#e0f0ff; }
 
-.entry button{
-  margin-top:0.3rem;
-  font-size:0.75rem;
-  background:transparent;
-  color:var(--muted);
-  border:1px solid var(--border);
+.entry.expired {
+  opacity:0.45;
+  text-decoration:line-through;
 }
 
-footer{
+footer {
   text-align:center;
-  font-size:0.75rem;
-  color:var(--muted);
+  font-size:0.8rem;
+  color:var(--text-muted);
   padding:2rem 1rem;
 }
 </style>
@@ -123,154 +131,176 @@ footer{
 
 <body>
 
-<header>
-<h1>Kindertreff</h1>
-<p style="font-size:0.85rem;color:var(--muted);max-width:600px;margin:auto;">
-Trage ein, wann dein Kind Zeit zum Spielen hat.  
-Alle sehen die Woche – nur du kannst deinen Eintrag löschen.
+<header><h1>Kindertreff</h1></header>
+
+<p style="font-size:0.85rem;color:var(--text-muted);max-width:600px;margin:auto;">
+Trage hier ein, wann dein Kind Zeit zum Spielen hat.<br>
+Alle sehen die Termine der aktuellen Woche, aber nur du kannst deinen eigenen Eintrag ändern oder löschen.<br>
+Alte Termine verschwinden automatisch.
 </p>
-</header>
 
 <main>
-
+<section>
+<h2>Neue Verfügbarkeit</h2>
 <div class="card">
 <form id="entryForm">
-<input id="name" placeholder="Name des Kindes" required>
+
+<input id="name" placeholder="Name des Kindes" required />
 
 <select id="group">
-<option>Kindi</option>
-<option>Turnen</option>
-<option>Musik</option>
-<option>Sonstiges</option>
+  <option>Kindi</option>
+  <option>Turnen</option>
+  <option>Musik</option>
+  <option>Sonstiges</option>
 </select>
 
-<label>Datum (tippen oder Kalender)</label>
-<input id="date" type="date" required>
+<label>Datum (TT.MM.JJJJ oder auswählen)</label>
+<input id="date" type="date" placeholder="TT.MM.JJJJ oder wählen">
 
 <div class="time-grid">
-<div>
-<label>Start</label>
-<input id="start" type="time" required>
-</div>
-<div>
-<label>Ende</label>
-<input id="end" type="time" required>
-</div>
+  <div>
+    <label>Startzeit</label>
+    <input id="start" type="time" required>
+  </div>
+  <div>
+    <label>Endzeit</label>
+    <input id="end" type="time" required>
+  </div>
 </div>
 
 <input id="note" placeholder="Ort / Hinweis (optional)">
 <button type="submit">Eintragen</button>
 </form>
 </div>
+</section>
 
+<section>
 <h2>Diese Woche</h2>
+<p style="font-size:0.8rem;color:var(--text-muted);margin-top:-0.5rem;">Ab heute · automatisch bereinigt</p>
 <div id="week"></div>
-
+</section>
 </main>
 
 <footer>
-Keine Anmeldung · Daten werden automatisch bereinigt
+Daten werden ausschließlich lokal im Browser gespeichert.
 </footer>
 
 <script src="https://unpkg.com/pocketbase/dist/pocketbase.umd.js"></script>
 <script>
+document.addEventListener("DOMContentLoaded", () => {
+
 const pb = new PocketBase("/api");
 
-/* lokaler Nutzer */
-let userId = localStorage.getItem("ktUser");
-if(!userId){
-  userId = crypto.randomUUID();
-  localStorage.setItem("ktUser", userId);
+/* lokaler User */
+let currentUserId = localStorage.getItem("kindertreffUser");
+if(!currentUserId){
+  currentUserId = crypto.randomUUID();
+  localStorage.setItem("kindertreffUser", currentUserId);
 }
 
-/* Woche vorbereiten */
+/* Hilfsfunktionen */
+function formatDay(d,i){
+  if(i===0) return "Heute";
+  if(i===1) return "Morgen";
+  return new Date(d).toLocaleDateString("de-DE",{weekday:"short",day:"numeric",month:"numeric"});
+}
+
+function normalizeDate(input){
+  if(!input) return null;
+  if(/\d{4}-\d{2}-\d{2}/.test(input)) return input;
+  const parts = input.split(".");
+  if(parts.length===3){
+    const [dd,mm,yyyy] = parts;
+    return `${yyyy}-${mm.padStart(2,"0")}-${dd.padStart(2,"0")}`;
+  }
+  return null;
+}
+
+function isExpired(e){
+  return new Date(e.date+"T"+e.end) < new Date();
+}
+
+/* Wochenübersicht */
 const weekEl = document.getElementById("week");
 const today = new Date(); today.setHours(0,0,0,0);
 const days = {};
-
 for(let i=0;i<7;i++){
-  const d=new Date(today);
+  const d = new Date(today);
   d.setDate(today.getDate()+i);
-  const key=d.toISOString().split("T")[0];
-
-  const el=document.createElement("div");
-  el.className="day";
-  el.innerHTML=`<h3>${i===0?"Heute":i===1?"Morgen":d.toLocaleDateString("de-DE",{weekday:"short",day:"numeric",month:"numeric"})}</h3><small>Keine Einträge</small>`;
-  weekEl.appendChild(el);
-  days[key]=el;
+  const key = d.toISOString().split("T")[0];
+  const div = document.createElement("div");
+  div.className="day";
+  div.innerHTML=`<h3>${formatDay(key,i)}</h3><small>Keine Einträge</small>`;
+  weekEl.appendChild(div);
+  days[key]=div;
 }
 
-/* Laden */
-async function load(){
-  Object.values(days).forEach(d=>d.querySelectorAll(".entry").forEach(e=>e.remove()));
-
+/* Laden & Rendern */
+async function loadEntries(){
   let entries=[];
   try{
-    entries=await pb.collection("entries").getFullList({sort:"date,start"});
-  }catch{return;}
+    entries = await pb.collection("entries").getFullList({sort:"date,start"});
+  }catch{console.warn("PocketBase offline?");}
+
+  // alte Inhalte löschen
+  Object.values(days).forEach(d=>{if(d.querySelectorAll(".entry").length===0 && !d.querySelector("small")){d.innerHTML+=`<small>Keine Einträge</small>`}});
 
   entries.forEach(e=>{
-    const day=days[e.date];
-    if(!day) return;
+    const dayDiv = days[e.date];
+    if(!dayDiv) return;
+    dayDiv.querySelector("small")?.remove();
 
-    day.querySelector("small")?.remove();
-
-    const expired=new Date(e.date+"T"+e.end)<new Date();
-    const div=document.createElement("div");
-    div.className="entry"+(expired?" expired":"")+(e.localUserId===userId?" own":"");
-    div.innerHTML=`
-<strong>${e.name}</strong><br>
-${e.start}–${e.end}<br>
-<small>${e.group}${e.note?" · "+e.note:""}</small>
-${e.localUserId===userId?`<br><button data-id="${e.id}">Löschen</button>`:""}
-`;
-    day.appendChild(div);
+    const own = e.createdBy===currentUserId;
+    const expired = isExpired(e);
+    const div = document.createElement("div");
+    div.className="entry"+(own?" own":"")+(expired?" expired":"");
+    div.innerHTML=`<strong>${e.name}</strong><br>(${e.start}–${e.end})<br><small>${e.group}${e.note?" · "+e.note:""}</small>
+      ${own?`<br><button class="secondary" data-id="${e.id}">Löschen</button>`:""}`;
+    dayDiv.appendChild(div);
   });
 
-  document.querySelectorAll("button[data-id]").forEach(b=>{
-    b.onclick=async()=>{
+  // Löschen mit Bestätigung
+  document.querySelectorAll("button[data-id]").forEach(btn=>{
+    btn.onclick=async ()=>{
       if(confirm("Eintrag wirklich löschen?")){
-        await pb.collection("entries").delete(b.dataset.id);
-        load();
+        await pb.collection("entries").delete(btn.dataset.id);
+        loadEntries();
       }
     };
   });
 }
 
 /* Formular */
-document.getElementById("entryForm").onsubmit = async e => {
+const form = document.getElementById("entryForm");
+form.addEventListener("submit", async e=>{
   e.preventDefault();
+  const name = document.getElementById("name").value.trim();
+  const group = document.getElementById("group").value;
+  const date = normalizeDate(document.getElementById("date").value);
+  const start = document.getElementById("start").value;
+  const end = document.getElementById("end").value;
+  const note = document.getElementById("note").value;
 
-  const nameEl = document.getElementById("name");
-  const groupEl = document.getElementById("group");
-  const dateEl = document.getElementById("date");
-  const startEl = document.getElementById("start");
-  const endEl = document.getElementById("end");
-  const noteEl = document.getElementById("note");
-
-  const alias = nameEl.value.trim();
-  if (!alias) {
-    alert("Bitte einen Namen eingeben.");
-    return;
-  }
+  if(!name){ alert("Bitte Name eingeben."); return;}
+  if(!date){ alert("Datum fehlt oder ungültig."); return;}
+  if(!start || !end){ alert("Bitte Start- und Endzeit angeben."); return;}
 
   await pb.collection("entries").create({
-    name: alias,
-    group: groupEl.value,
-    date: dateEl.value,
-    start: startEl.value,
-    end: endEl.value,
-    note: noteEl.value,
-    localUserId: userId
+    name, group, date, start, end, note, createdBy: currentUserId
   });
 
-  e.target.reset();
-  load();
-};
+  form.reset();
+  loadEntries();
+});
 
+/* Init */
+loadEntries();
+
+});
 </script>
 
 </body>
 </html>
+
 
 
