--- a/projekt-kindertreff-demo.html
+++ b/projekt-kindertreff-demo.html
@@ -201,19 +201,20 @@ for(let i=0;i<7;i++){
 
 /* Laden */
 async function loadEntries(){
-    const now = new Date();
-
-    for (const e of entries) {
-      const endTime = new Date(`${e.date}T${e.end}`);
-      if (endTime < now) {
-        await pb.collection("entries").delete(e.id);
-      }
-    }
-
-
   Object.values(days).forEach(d=>d.innerHTML=d.querySelector("h3").outerHTML+"<small>Keine Einträge</small>");
 
   const entries = await pb.collection("entries").getFullList({sort:"date,start"});
+
+  /* ABGELAUFENE LÖSCHEN */
+  const now = new Date();
+  for (const e of entries) {
+    const endTime = new Date(`${e.date}T${e.end}`);
+    if (endTime < now) {
+      await pb.collection("entries").delete(e.id);
+    }
+  }
+
+  /* Anzeige */
   entries.forEach(e=>{
     const day = days[e.date?.split(" ")[0]];
     if(!day) return;
