--- a/Projekte/kindertreff-info.html
+++ b/Projekte/kindertreff-info.html
@@ -14,12 +14,12 @@
   <article class="project">
 
     <h1>Kindertreff</h1>
-    <p class="subtitle">Ruhige Spielverabredungen ohne Stress</p>
+    <p class="subtitle">Spielverabredungen ohne Stress</p>
 
     <p>
       Kindertreff ist eine konzeptionelle Web-Demo, entstanden aus einem realen
       Alltagsproblem vieler Eltern: Spontane Spielverabredungen zu koordinieren
-      ist oft unnötig aufwendig. Häufig müssen mehrere Eltern einzeln kontaktiert
+      ist oft unnötig aufwändig. Häufig müssen mehrere Eltern einzeln kontaktiert
       werden, nur um herauszufinden, wer überhaupt Zeit hat.
     </p>
 
@@ -41,8 +41,8 @@
     <p>
       Die Idee hinter Kindertreff ist bewusst einfach:
       Eltern tragen freiwillig und zeitlich begrenzt ein, wann ihr Kind zum
-      Spielen verfügbar ist. Diese Information wird klar und reduziert
-      dargestellt und bleibt auf kleine, vertraute Gruppen beschränkt.
+      Spielen verfügbar ist. Diese Informationen werden klar und reduziert
+      dargestellt und bleiben innerhalb kleiner, vertrauter Kreise sichtbar.
     </p>
 
     <p>
@@ -54,16 +54,17 @@
     <ul>
       <li>Status statt Kommunikation</li>
       <li>Übersicht statt Feed</li>
-      <li>Private Gruppen statt Öffentlichkeit</li>
+      <li>Vertrauliche Kreise statt Öffentlichkeit</li>
     </ul>
 
-    <h2>Geplante Funktionen</h2>
+    <h2>Funktionen</h2>
     <ul>
-      <li>Eintragen von Spielverfügbarkeiten (z. B. heute, morgen, diese Woche)</li>
-      <li>Organisation über Gruppen (z. B. Kita, Nachbarschaft, Freundeskreis)</li>
-      <li>Optionale Angaben zu Uhrzeit, Ort oder Hinweisen</li>
-      <li>Automatisches Entfernen abgelaufener Einträge</li>
-      <li>Keine dauerhafte Speicherung von Daten</li>
+      <li>Eintragen von Spielverfügbarkeiten (z. B. heute, morgen, diese Woche)</li>
+      <li>Kategorisierung nach Gruppen/Klassen/Clubs (z. B. Kindi, Turnen, Musik, Sonstiges)</li>
+      <li>Optionale Angaben zu Uhrzeit und Ort</li>
+      <li>Automatisches Entfernen abgelaufener Einträge nach einer Woche</li>
+      <li>Eigene Einträge können bearbeitet oder gelöscht werden</li>
+      <li>Keine dauerhafte Speicherung personenbezogener Daten</li>
     </ul>
 
     <p>
@@ -83,23 +84,25 @@
     <h2>Datenschutz & Haltung</h2>
     <p>
       Datenschutz ist ein zentraler Bestandteil des Konzepts.
-      Die Demo speichert Daten ausschließlich lokal im Browser und
-      verzichtet vollständig auf Benutzerkonten oder Server.
-      Alle Einträge sind zeitlich begrenzt, jederzeit löschbar
-      und nur für die jeweilige Person sichtbar.
+      Die Anwendung speichert Daten zentral über PocketBase, jedoch
+      ausschließlich zeitlich begrenzt und nur so lange, wie es für die
+      Organisation der Spielverfügbarkeiten nötig ist. Alle Einträge sind
+      sichtbar für alle Nutzer, eigene Einträge lassen sich jederzeit bearbeiten
+      oder löschen.
     </p>
 
     <h2>Technischer Ansatz</h2>
     <ul>
       <li>HTML5 & modernes, frameworkfreies CSS</li>
       <li>Mobile-first & responsive</li>
-      <li>Aktuell als statische Web-Demo umgesetzt</li>
+      <li>Datenspeicherung über PocketBase</li>
+      <li>Automatisches Löschen abgelaufener Einträge</li>
       <li>Perspektivisch denkbar als PWA oder App-Prototyp</li>
     </ul>
 
     <h2>Ziel & Projektstatus</h2>
     <p>
-      Ziel ist die Entwicklung einer funktionalen Demo mit klarem
+      Ziel ist die Entwicklung einer funktionalen Anwendung mit klarem
       konzeptionellen Fokus, sauberer Struktur und bewusster Reduktion.
       Kindertreff befindet sich derzeit in der Konzept- und Demo-Phase
       und wird schrittweise weiterentwickelt, um Ideen zu testen
