--- a/index.html
+++ b/index.html
@@ -158,9 +158,8 @@
               <strong>Technologie:</strong> HTML · CSS · Vanilla JavaScript
             </p>
           
-            <div class="project-actions">
-              <a href="#" class="demo-disabled">Demo (in Arbeit)</a>
-              <!--<a href="projekt-kindertreff-demo.html" class="btn">Demo öffnen</a>-->
+            <div class="project-actions">              
+              <a href="projekt-kindertreff-demo.html" class="btn">Demo öffnen</a>
               <a href="Projekte/kindertreff-info.html" class="btn btn-secondary">Projekt ansehen</a>
             </div>
             </div>
