--- a/projekt-kindertreff-demo.html
+++ b/projekt-kindertreff-demo.html
@@ -108,7 +108,7 @@ footer {
 
 <p style="font-size:0.85rem;color:var(--text-muted);max-width:600px;margin:auto;">
 Trage hier ein, wann dein Kind Zeit zum Spielen hat.<br>
-Alle sehen die Termine der aktuellen Woche. Nur du kannst deine eigenen Einträge bearbeiten oder löschen.
+Alle sehen die Termine der aktuellen Woche. <br>
 </p>
 
 <main>
@@ -154,8 +154,9 @@ Alle sehen die Termine der aktuellen Woche. Nur du kannst deine eigenen Einträg
 </main>
 
 <footer>
-Daten werden zentral gespeichert und automatisch nach Ablauf gelöscht.
+Daten werden zentral gespeichert und automatisch nach Ablauf gelöscht. Eigene Einträge lassen sich bearbeiten oder löschen.
 </footer>
+
 
 <script src="https://unpkg.com/pocketbase/dist/pocketbase.umd.js"></script>
 <script>
