--- a/demo-fotosharing/index.html
+++ b/demo-fotosharing/index.html
@@ -61,6 +61,8 @@
   <h2>Foto hochladen</h2>
   <input type="file" id="fileInput" accept="image/*">
   <button onclick="uploadPhoto()">Upload</button>
+  <p id="uploadStatus" style="margin-top:0.5rem;"></p>
+
 
   <h3>Meine Fotos</h3>
   <div id="gallery"></div>
