Html - Index Hauptseite und Anpassungen fotosharing

--- a/index.html
+++ b/index.html
@@ -164,6 +164,40 @@
           </div>
         </article>
 
+        <article class="project-card project-main fade-in" aria-labelledby="project-fotosharing">
+          <div class="project-inner">
+            <h3 id="project-fotosharing">Foto-Sharing (Kundengalerie-Demo)</h3>
+
+            <p class="project-subline">
+              Sichere Foto-Uploads & private Galerie – reduziert, schnell, ohne Plattform-Zwang.
+            </p>
+
+            <p>
+              Diese Web-Demo zeigt eine einfache Kundengalerie, wie sie z. B. für Fotografinnen und Fotografen
+              eingesetzt werden kann: Nutzer registrieren sich, laden Bilder hoch und sehen ihre Inhalte direkt
+              in einer privaten Galerie. Der Fokus liegt auf klarer Bedienung, Datensparsamkeit und einem
+              nachvollziehbaren technischen Aufbau.
+            </p>
+
+            <ul class="project-highlights">
+              <li><strong>Problem:</strong> Fotos austauschen ist oft umständlich (Messenger, Cloud-Links, Plattformen)</li>
+              <li><strong>Lösung:</strong> Login + Upload + Galerie in einer schlanken Web-Anwendung</li>
+              <li><strong>Zielgruppe:</strong> Kleine Teams, Kund:innen-Projekte, Fotograf:innen (Vorab-Auswahl / Übergabe)</li>
+              <li><strong>Fokus:</strong> Private Daten, einfache Abläufe, schnelle Umsetzung</li>
+            </ul>
+
+            <p class="project-tech">
+              <strong>Technologie:</strong> HTML · CSS · Vanilla JavaScript · PocketBase · NGINX
+            </p>
+
+            <div class="project-actions">
+              <a href="demo-fotosharing/index.html" class="btn">Demo öffnen</a>
+              <a href="Projekte/fotosharing-info.html" class="btn btn-secondary">Projekt ansehen</a>
+            </div>
+          </div>
+        </article>
+
+
 
       
         <article class="project-card project-main fade-in" aria-labelledby="project-simpledoc">
@@ -367,7 +401,7 @@
 <footer class="site-footer">
   <nav aria-label="Footer-Navigation">
     <a href="#home">Start</a> ·
-    <a href="#kontakt">Kontakt</a> ·
+    <a href="#kontakt" class="btn btn-secondary">Kontakt</a> ·
     <a href="impressum.html">Impressum</a> ·
     <a href="datenschutz.html">Datenschutz</a>
   </nav>
