--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 <footer class="site-footer">
   <nav aria-label="Footer-Navigation">
     <a href="#home">Start</a> ·
-    <a href="#kontakt" class="btn btn-secondary">Kontakt</a> ·
+    <a href="#kontakt">Kontakt</a> ·
     <a href="impressum.html">Impressum</a> ·
     <a href="datenschutz.html">Datenschutz</a>
   </nav>
