--- a/impressum.html
+++ b/impressum.html
@@ -5,6 +5,8 @@
 <meta name="robots" content="noindex, nofollow">
 
   <title>Impressum</title>
+
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
