--- a/projekt-simpledoc-demo.html
+++ b/projekt-simpledoc-demo.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="noindex, nofollow">
   <title>SimpleDoc – Demo</title>
   <meta name="description" content="SimpleDoc – strukturierte Notizen für den Praxisalltag (Demo)">
 
