--- a/datenschutz.html
+++ b/datenschutz.html
@@ -3,174 +3,154 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>Datenschutzerklärung</title>
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/assets/css/tokens.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
+
 </head>
+
 <body>
 
 <main class="legal-page">
-
   <article class="legal-card">
-<h1>Datenschutzerklärung</h1>
 
-<section>
-  <h2>1. Verantwortliche Stelle</h2>
-  <p>
-    Verantwortlich für die Datenverarbeitung auf dieser Website ist:
-  </p>
-  <p>
-    <strong>Katrin Mack</strong><br>
-    E-Mail: <a href="mailto:woehrle.katrin@gmail.com">woehrle.katrin@gmail.com</a>
-  </p>
-  <p>
-    Weitere Kontaktdaten finden Sie im <a href="impressum.html">Impressum</a>.
-  </p>
-</section>
+    <h1>Datenschutzerklärung</h1>
 
-<section>
-  <h2>2. Hosting und Server</h2>
+    <section>
+      <h2>1. Verantwortliche Stelle</h2>
+      <p>
+        Verantwortlich für die Datenverarbeitung auf dieser Website ist:
+      </p>
+      <p>
+        <strong>Katrin Mack</strong><br>
+        E-Mail:
+        <a href="mailto:woehrle.katrin@gmail.com">woehrle.katrin@gmail.com</a>
+      </p>
+      <p>
+        Weitere Kontaktdaten finden Sie im
+        <a href="/impressum.html">Impressum</a>.
+      </p>
+    </section>
 
-  <p>
-    Diese Website wird auf einem Server der Hetzner Online GmbH (Industriestr. 25, 91710 Gunzenhausen, Deutschland) betrieben.
-  </p>
+    <section>
+      <h2>2. Hosting und Server</h2>
 
-  <p>
-    Beim Aufruf der Website verarbeitet der Server technisch notwendige Informationen,
-    um die Inhalte auszuliefern sowie die Sicherheit und Stabilität der Website zu gewährleisten.
-  </p>
+      <p>
+        Diese Website wird auf einem Server der Hetzner Online GmbH
+        (Industriestr. 25, 91710 Gunzenhausen, Deutschland) betrieben.
+      </p>
 
-  <p>Dabei können insbesondere folgende Daten verarbeitet werden:</p>
+      <p>
+        Beim Aufruf der Website verarbeitet der Server technisch notwendige Informationen,
+        um die Inhalte auszuliefern sowie die Sicherheit und Stabilität der Website zu gewährleisten.
+      </p>
 
-  <ul>
-    <li>IP-Adresse (ggf. gekürzt oder anonymisiert, abhängig von der Serverkonfiguration)</li>
-    <li>Datum und Uhrzeit der Anfrage</li>
-    <li>aufgerufene Seite oder Datei (URL)</li>
-    <li>übertragene Datenmenge</li>
-    <li>Statuscode (Meldung über erfolgreichen Abruf)</li>
-    <li>Browser- und Betriebssysteminformationen (User-Agent)</li>
-    <li>Referrer-URL</li>
-  </ul>
+      <p>Dabei können insbesondere folgende Daten verarbeitet werden:</p>
 
-  <p>
-    Die Verarbeitung erfolgt auf Grundlage von Art. 6 Abs. 1 lit. f DSGVO
-    (berechtigtes Interesse an einem sicheren und stabilen Betrieb der Website).
-  </p>
+      <ul>
+        <li>IP-Adresse</li>
+        <li>Datum und Uhrzeit der Anfrage</li>
+        <li>aufgerufene Seite oder Datei (URL)</li>
+        <li>übertragene Datenmenge</li>
+        <li>Statuscode</li>
+        <li>Browser- und Betriebssysteminformationen</li>
+        <li>Referrer-URL</li>
+      </ul>
 
-  <p>
-    Weitere Informationen zur Datenverarbeitung durch Hetzner finden Sie in der Datenschutzerklärung von Hetzner:
-    <a href="https://www.hetzner.com/legal/privacy-policy/" target="_blank" rel="noopener noreferrer">
-      https://www.hetzner.com/legal/privacy-policy/
-    </a>
-  </p>
-</section>
+      <p>
+        Die Verarbeitung erfolgt auf Grundlage von Art. 6 Abs. 1 lit. f DSGVO
+        (berechtigtes Interesse an einem sicheren und stabilen Betrieb der Website).
+      </p>
 
-<section>
-  <h2>3. Web-Anwendung „Kindertreff“</h2>
+      <p>
+        Weitere Informationen:
+        <a href="https://www.hetzner.com/legal/privacy-policy/" target="_blank" rel="noopener noreferrer">
+          Datenschutzerklärung von Hetzner
+        </a>
+      </p>
+    </section>
 
-  <p>
-    Für die Web-Anwendung <strong>Kindertreff</strong> wird PocketBase auf dem Hetzner-Server genutzt.
-    Dort werden von Nutzern eingetragene Spielverfügbarkeiten gespeichert, um sie innerhalb der Anwendung anzeigen zu können.
-  </p>
+    <section>
+      <h2>3. Web-Anwendung „Kindertreff“</h2>
 
-  <p>Erhobene Daten sind:</p>
+      <p>
+        Für die Web-Anwendung <strong>Kindertreff</strong> wird PocketBase auf dem Hetzner-Server genutzt.
+      </p>
 
-  <ul>
-    <li>Vorname oder Alias des Kindes</li>
-    <li>Datum und Uhrzeit der Verfügbarkeit</li>
-    <li>optional: Hinweise oder Ort der Spielverabredung</li>
-  </ul>
+      <ul>
+        <li>Vorname oder Alias</li>
+        <li>Datum und Uhrzeit der Verfügbarkeit</li>
+        <li>optionale Hinweise</li>
+      </ul>
 
-  <p>
-    Die Daten werden ausschließlich für die Darstellung der Verfügbarkeiten innerhalb der Web-Anwendung verwendet.
-    Es werden keine sensiblen personenbezogenen Daten wie Nachname, Adresse oder Kontaktdaten gespeichert.
-  </p>
+      <p>
+        Es werden keine sensiblen personenbezogenen Daten gespeichert.
+        Alle Einträge werden automatisch nach einer Woche gelöscht.
+      </p>
 
-  <p>
-    Alle Einträge werden automatisch nach einer Woche gelöscht. Nutzer können ihre eigenen Einträge jederzeit selbst entfernen.
-  </p>
+      <p>
+        Rechtsgrundlage: Art. 6 Abs. 1 lit. f DSGVO.
+      </p>
+    </section>
 
-  <p>
-    Die Verarbeitung erfolgt auf Grundlage von Art. 6 Abs. 1 lit. f DSGVO
-    (berechtigtes Interesse an der Bereitstellung einer funktionalen Web-Anwendung).
-  </p>
-</section>
+    <section>
+      <h2>4. Kontaktformular</h2>
 
-<section>
-  <h2>4. Kontaktformular</h2>
+      <p>
+        Das Kontaktformular nutzt den Dienst <strong>Basin (usebasin.com)</strong>.
+      </p>
 
-  <p>
-    Wenn Sie mir über das Kontaktformular eine Nachricht senden, wird die Übermittlung technisch über den Dienst
-    <strong>Basin (usebasin.com)</strong> abgewickelt.
-  </p>
+      <p>
+        Die Verarbeitung erfolgt zur Bearbeitung Ihrer Anfrage
+        (Art. 6 Abs. 1 lit. b oder lit. f DSGVO).
+      </p>
 
-  <p>
-    Dabei werden die von Ihnen im Formular eingegebenen Daten (z. B. Name, E-Mail-Adresse, Nachricht) an Basin übertragen
-    und zur Zustellung bzw. Weiterleitung der Anfrage verarbeitet.
-  </p>
+      <p>
+        Weitere Informationen:
+        <a href="https://usebasin.com/privacy" target="_blank" rel="noopener noreferrer">
+          Datenschutzerklärung von Basin
+        </a>
+      </p>
+    </section>
 
-  <p>
-    Die Verarbeitung der Formularanfrage erfolgt zur Bearbeitung Ihrer Kontaktaufnahme und zur Kommunikation mit Ihnen:
-  </p>
+    <section>
+      <h2>5. Rechte der betroffenen Personen</h2>
 
-  <ul>
-    <li>Art. 6 Abs. 1 lit. b DSGVO (vorvertragliche Kommunikation), oder</li>
-    <li>Art. 6 Abs. 1 lit. f DSGVO (berechtigtes Interesse an einer effizienten Bearbeitung von Anfragen)</li>
-  </ul>
+      <ul>
+        <li>Auskunft (Art. 15 DSGVO)</li>
+        <li>Berichtigung (Art. 16 DSGVO)</li>
+        <li>Löschung (Art. 17 DSGVO)</li>
+        <li>Einschränkung (Art. 18 DSGVO)</li>
+        <li>Widerspruch (Art. 21 DSGVO)</li>
+      </ul>
 
-  <p>
-    Die Daten werden nur so lange gespeichert, wie es für die Bearbeitung der Anfrage erforderlich ist,
-    bzw. im Rahmen gesetzlicher Aufbewahrungspflichten.
-  </p>
+      <p>
+        Zuständige Aufsichtsbehörde:
+        Landesbeauftragte für Datenschutz Baden-Württemberg.
+      </p>
+    </section>
 
-  <p>
-    Weitere Informationen zur Datenverarbeitung durch Basin finden Sie in den Datenschutzhinweisen von Basin:
-    <a href="https://usebasin.com/privacy" target="_blank" rel="noopener noreferrer">
-      https://usebasin.com/privacy
-    </a>
-  </p>
-</section>
+    <section>
+      <h2>6. Cookies und Tracking</h2>
 
-<section>
-  <h2>5. Rechte der betroffenen Personen</h2>
+      <p>
+        Diese Website verwendet keine Cookies und keine Tracking-Tools.
+        Die Übertragung erfolgt verschlüsselt über HTTPS.
+      </p>
+    </section>
 
-  <p>Sie haben jederzeit das Recht:</p>
+    <p><em>Stand: Februar 2026</em></p>
 
-  <ul>
-    <li>Auskunft über Ihre gespeicherten personenbezogenen Daten zu erhalten (Art. 15 DSGVO)</li>
-    <li>Berichtigung unrichtiger Daten zu verlangen (Art. 16 DSGVO)</li>
-    <li>Löschung Ihrer Daten zu verlangen (Art. 17 DSGVO)</li>
-    <li>Einschränkung der Verarbeitung zu verlangen (Art. 18 DSGVO)</li>
-    <li>Widerspruch gegen die Verarbeitung einzulegen (Art. 21 DSGVO)</li>
-  </ul>
+    <div class="legal-back">
+      <a href="/index.html">← Zurück zur Startseite</a>
+    </div>
 
-  <p>
-    Zudem haben Sie das Recht, sich bei einer zuständigen Datenschutzaufsichtsbehörde zu beschweren.
-    Zuständig ist der Landesbeauftragte für den Datenschutz und die Informationsfreiheit Baden-Württemberg (LfDI BW).
-  </p>
-</section>
-
-<section>
-  <h2>6. Cookies und Tracking</h2>
-
-  <p>
-    Diese Website verwendet keine Cookies sowie keine Tracking- oder Analyse-Tools.
-  </p>
-
-  <p>
-    Die Übertragung Ihrer Daten erfolgt verschlüsselt über HTTPS.
-  </p>
-</section>
-
-<p><em>Stand: Januar 2026</em></p>
-</article>
-
-<p class="legal-back">
-    <a href="index.html">← Zurück zur Startseite</a>
-  </p>
-
+  </article>
 </main>
 
 </body>
 </html>
+
 
