--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16.png">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Katrin Mack – Softwareentwicklerin</title>
   <meta name="description" content="Portfolio von Katrin Mack – Softwareentwicklerin mit Fokus auf strukturierte Logik, eigenständiges Arbeiten und effiziente Remote-Zusammenarbeit.">
 
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/assets/css/tokens.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+
 
 </head>
 <body>
@@ -158,8 +163,8 @@
             </p>
           
             <div class="project-actions">              
-              <a href="projekt-kindertreff-demo.html" class="btn">Demo öffnen</a>
-              <a href="Projekte/kindertreff-info.html" class="btn btn-secondary">Projekt ansehen</a>
+              <a href="/demos/kindertreff/projekt-kindertreff-demo.html" class="btn">Demo öffnen</a>
+              <a href="projects/kindertreff-info.html" class="btn btn-secondary">Projekt ansehen</a>
             </div>
           </div>
         </article>
@@ -191,8 +196,8 @@
             </p>
 
             <div class="project-actions">
-              <a href="demo-fotosharing/index.html" class="btn">Demo öffnen</a>
-              <a href="Projekte/fotosharing-info.html" class="btn btn-secondary">Projekt ansehen</a>
+              <a href="/demos/fotosharing/projekt-fotosharing-demo.html" class="btn">Demo öffnen</a>
+              <a href="projects/fotosharing-info.html" class="btn btn-secondary">Projekt ansehen</a>
             </div>
           </div>
         </article>
@@ -231,8 +236,8 @@
 
           
             <div class="project-actions">
-              <a href="projekt-simpledoc-demo.html" class="btn">Demo öffnen</a>
-              <a href="Projekte/simpleDoc-info.html" class="btn btn-secondary">Projekt ansehen</a>
+              <a href="/demos/simpledoc/projekt-simpledoc-demo.html" class="btn">Demo öffnen</a>
+              <a href="projects/simpleDoc-info.html" class="btn btn-secondary">Projekt ansehen</a>
             </div>
               </div>
         </article>
@@ -287,7 +292,7 @@
         <div class="projekt-media">
           <img
             loading="lazy"
-            src="bilder/lernprogramm-bachelor.png"
+            src="assets/img/lernprogramm-bachelor.png"
             alt="Screenshot des Lernprogramms zur Vorbereitung auf den Basispass Pferdekunde"
             class="projekt-bild"
           />
@@ -338,7 +343,7 @@
         <div class="projekt-media">
           <img
             loading="lazy"
-            src="bilder/read-and-go.png"
+            src="assets/img/read-and-go.png
             alt="Screenshot des Read-and-Go Fachlernspiels"
             class="projekt-bild klein"
           />
@@ -407,7 +412,7 @@
   </nav>
 </footer>
 
-  <script src="script.js"></script>
+  <script src="assets/js/script.js"></script>
 
 </body>
 </html>
