--- a/projects/fotosharing-info.html
+++ b/projects/fotosharing-info.html
@@ -6,7 +6,9 @@
   <title>Foto-Sharing – Projektbeschreibung</title>
 
   <meta name="description" content="Foto-Sharing – eine schlanke Web-Demo für private Kundengalerien mit Login, Upload und Galerieansicht.">
-  <link rel="stylesheet" href="../css/projektinfos.css">
+  <link rel="stylesheet" href="/assets/css/tokens.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/projektinfos.css">
 </head>
 <body>
 
