--- a/projects/kindertreff-info.html
+++ b/projects/kindertreff-info.html
@@ -6,7 +6,9 @@
   <title>Kindertreff – Projektbeschreibung</title>
 
   <meta name="description" content="Kindertreff – eine ruhige, datensparsame Web-Demo zur Organisation spontaner Spielverabredungen für Kinder.">
-  <link rel="stylesheet" href="../css/projektinfos.css">
+  <link rel="stylesheet" href="/assets/css/tokens.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/projektinfos.css">
 </head>
 <body>
 
