--- a/projects/simpleDoc-info.html
+++ b/projects/simpleDoc-info.html
@@ -6,7 +6,9 @@
   <title>SimpleDoc – Projektbeschreibung</title>
 
   <meta name="description" content="SimpleDoc – eine minimalistische Demo für strukturierte Kurznotizen im Praxisalltag.">
-  <link rel="stylesheet" href="../css/projektinfos.css">
+  <link rel="stylesheet" href="/assets/css/tokens.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/projektinfos.css">
 </head>
 <body>
 
